# jex-sc-staking-v2

./: .gitignore  Cargo.toml  README.md  build_wasm.sh
doc/: jex-staking-v2-sequence.excalidraw
interaction/: README.md  _common.snippets.sh  devnet.snippets.sh  distribute.py  erdpy.data-storage.json  export_holders.sh  externals.py  mainnet.snippets.sh  mxpy.data-storage.json  register_holders.sh  requirements.txt  snapshot.py  testnet.snippets.sh  utils.py
mandos/: configure_token.scen.json  configure_token_not_owner.scen.json  configure_token_replace.scen.json  distribute_already_complete.scen.json  distribute_nominal_step_1.scen.json  distribute_nominal_step_2.scen.json  distribute_not_owner.scen.json  distribute_rewards_nominal_step_1.scen.json  distribute_rewards_nominal_step_2.scen.json  distribute_rewards_not_owner.scen.json  distribute_rewards_not_prepared.scen.json  distribute_rewards_wrong_period.scen.json  distribute_wrong_period.scen.json  fund_rewards.scen.json  fund_rewards_already_prepared.scen.json  fund_rewards_wrong_period.scen.json  get_state_accumulation.scen.json  get_state_distribution.scen.json  get_state_distribution_done.scen.json  get_state_snapshot.scen.json  init.scen.json  init_round_distrib_incomplete.scen.json  init_round_nominal.scen.json  init_round_not_owner.scen.json  prepare_rewards_already_prepared.scen.json  prepare_rewards_nominal.scen.json  prepare_rewards_not_owner.scen.json  remove_rewards_nominal.scen.json  remove_rewards_wrong_period.scen.json  (+5 more)
meta/: Cargo.toml
meta/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+23 files in other folders)
