[package]
name = "jex-sc-staking-v2-wasm"
version = "0.0.0"
authors = [ "Aurélien Passion <aurelien.passion@gmail.com>",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.jex-sc-staking-v2]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.5"
